# spatio-temporal_matching

./: .gitignore  README.md
boundingBox/src/: Bounding_box_pair.cpp  Bounding_box_pair.h  frame_simulator.cpp  frame_simulator.h  matching_compute.cpp  matching_compute.h  objData.cpp  objData.h  welt_cpp_im_graph.cpp  welt_cpp_im_graph.h  welt_cpp_imread.cpp  welt_cpp_imread.h
boundingBox/src/html/: class_bounding__box__pair.html  classes.html  classframe__simulator.html  classmatching__compute.html  classobj_data-members.html  classobj_data.html  classwelt__cpp__im__graph.html  classwelt__cpp__imread-members.html  classyolo-members.html  classyolo.html  files.html  functions_func.html  hierarchy.html  matching__compute_8h_source.html  obj_data_8h_source.html  structgraph__parameter.html  welt__cpp__im__graph_8h_source.html  yolo_8h_source.html
boundingBox/src/latex/: annotated.tex  class_bounding__box__pair.tex  classframe__simulator.tex  classmatching__compute.tex  classobj_data.tex  refman.tex  struct_point.tex
boundingBox/test01/: diagnostics.txt  makeme  runme
boundingBox/util/: CMakeLists.txt  welt_cpp_im_graph_driver.cpp
merge/demo/: benchmark-simple.sh  benchmark.sh
merge/demo/demo-nature/: CMakeLists.txt  M0201_gt.txt  README.txt  bbox_match_driver.cpp  cleanme
merge/demo/demo-spie/: benchmark.sh  cleanme  makeme  runme-power.sh
merge/demo/demo-spie-serial/: CMakeLists.txt  benchmark.sh  driver.cpp  runme  serial_benchmark.sh
merge/demo/demo00/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  benchmark.sh  cleanme  cmake_install.cmake  compile_commands.json  driver.cpp  example-out.txt  runme
merge/demo/demo01/: CMakeLists.txt  Makefile  README.txt  cleanme  merge_graph_driver.cpp  runme
merge/demo/demo02/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cleanme  cmake_install.cmake  compile_commands.json  dist_graph_driver.cpp  runme
merge/demo/demo03/: CMakeLists.txt  README.txt  combined_graph_driver.cpp
merge/demo/demo04/: CMakeLists.txt  README.txt  combined_graph_driver.cpp  runme
merge/demo/demo05/: CMakeLists.txt  README.txt  cleanme  runme  video_driver.cpp
merge/demo/demo06/: CMakeLists.txt  benchmark.sh  cleanme  pipeline_driver.cpp  runme
merge/demo/demo07/: CMakeLists.txt  benchmark.sh  pipeline_driver.cpp  runme
merge/demo/demo08/: CMakeCache.txt  CMakeLists.txt  Makefile  benchmark.sh  cleanme  cmake_install.cmake  combined_graph_driver.cpp  runme  runme-uav
merge/demo/demo09/: CMakeLists.txt  M0101_gt.txt  bbox_match_driver.cpp  runme
merge/demo/demo_spie/: CMakeLists.txt  benchmark.sh  results-desktop.txt  runme  spie_driver.cpp
merge/src/actors/: Bounding_box_pair.cpp  Bounding_box_pair.h  detection_merge.cpp  detection_merge.h  detection_merge_lightweight.cpp  detection_merge_lightweight.h  detection_merge_single.cpp  detection_merge_single.h  file_sink.cpp  file_source.cpp  file_source.h  frame_dist.cpp  frame_dist.h  frame_dist_lightweight.cpp  frame_dist_lightweight.h  image_fork_enable_spie.cpp  image_fork_enable_spie.h  image_preprocess.cpp  image_preprocess.h  image_tile_det.cpp  image_tile_det.h  image_tile_det_lightweight.cpp  image_tile_det_lightweight.h  image_tile_multi_detector.cpp  image_tile_multi_detector.h  image_tile_no_partition.cpp  image_tile_no_partition.h  image_tile_partition.cpp  image_tile_partition.h  image_tile_selector.h  matching_compute.cpp  matching_compute.h  tracking_nature.cpp  tracking_nature.h
merge/src/graph/: combined_graph.cpp  combined_graph.h  combined_graph_lightweight.cpp  combined_graph_lightweight.h  dist_graph.cpp  dist_graph.h  graph_settings_common.h  merge_graph.cpp  merge_graph.h  merge_graph_multi_detector.cpp  merge_graph_multi_detector.h  merge_graph_no_partition.cpp  nature_graph.cpp  (+7 more)
src/: Bounding_box_pair.cpp  Bounding_box_pair.h  frame_simulator.cpp  frame_simulator.h  matching_compute.h  welt_cpp_im_graph.h  welt_cpp_imread.cpp  yolo.cpp  yolo.h
src/html/: _bounding__box__pair_8h_source.html  annotated.html  class_bounding__box__pair-members.html  classframe__simulator-members.html  classmatching__compute-members.html  classwelt__cpp__im__graph-members.html  classwelt__cpp__imread.html  frame__simulator_8h_source.html  functions.html  struct_point-members.html  struct_point.html  structgraph__parameter-members.html  welt__cpp__imread_8h_source.html
src/latex/: classframe__simulator.eps  classmatching__compute.eps  classwelt__cpp__im__graph.eps  classwelt__cpp__im__graph.tex  classwelt__cpp__imread.eps  classwelt__cpp__imread.tex  classyolo.eps  classyolo.tex  hierarchy.tex  structgraph__parameter.tex
src/object_detection_tiling/: CMakeLists.txt  object_detection.cpp
test01/: M0205_det.txt
util/: CMakeLists.txt  dlcppconfig  makeme  runtest
welter-example/: CMakeLists.txt  README.txt  cleanme  local-dictionary.txt
welter-example/autotest-output/: test_output.txt  test_summary.txt
welter-example/demo/: CMakeLists.txt  README.txt  demo_count_bright_pixels.cpp  input.txt  makeme  runme
welter-example/dxnotes/: README.txt  makeme  uxrelease  uxrelease-log.txt
welter-example/src/: CMakeLists.txt  makeme
welter-example/src/actors/: count_bright_pixels.cpp  count_bright_pixels.h  file_sink.cpp  file_sink.h  image_tile_det.cpp  image_tile_det.h  image_tile_partition.cpp  image_tile_partition.h
welter-example/src/actors/object_detection_tiling/: README.md  object_detection.cpp  object_detection.h
welter-example/src/graph/: welter_example_graph.cpp  welter_example_graph.h
welter-example/test/: CMakeLists.txt
welter-example/test/test01/: CMakeLists.txt  README.txt  driver1.cpp  runme
welter-example/test/test01/autotest-output/: error_output.txt
welter-example/test/test02/: CMakeLists.txt  README.txt  driver2.cpp  in.txt  runme
welter-example/test/test02/autotest-output/: error_output.txt
welter-example/test/test03/: CMakeLists.txt  README.txt  driver3.cpp  runme
welter-example/test/test03/autotest-output/: error_output.txt
welter-example/test/util/: CMakeLists.txt  source_sink_graph.cpp  source_sink_graph.h
(+61 files in other folders)
